--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -13,12 +13,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>KNITTY GRITTY</h1>
+        <h1 class="title">THE KNITTY GRITTY</h1>
         
         <div class="pageContainer">
             <header>
                 <div>
-                    <a href="/#/">KnittyGritty</a>
+                    <a id="logo" href="/#/">
+                        <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/1606143/yarn-clipart-md.png" alt="">
+                    </a>
                 </div>
                 <div>
                     <a href="/#/womens">Womens</a>
@@ -31,9 +33,9 @@
 
             </main>
             <footer>
-                Orders only able to be filled in United States.
-                Follow us on Instagram/Facebook/Twitter at knitty_gritty
-                Leave us a review <a href="/#/here">here</a>
+                Orders only able to be filled in United <br>
+                Follow us on Instagram/Facebook/Twitter @ knitty_gritty <br>
+                Leave us a review <a href="/#/here">here</a> <br>
                 
                 Located in Cincinnati, Ohio, 45238
             </footer>
