basic layout of products created.

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -29,7 +29,62 @@
                 </div>
             </header>
             <main>
-                Top Products
+                <div class="allProductCont">
+                   <div class="itemTiles" id="wm1">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="wm2">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="wm3">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="toy1">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="toy2">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="toy3">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="dec1">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="dec2">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                   <div class="itemTiles" id="dec3">
+                    <a href=""><img src="" alt=""></a>
+                    <h1 class="productDesc"></h1>
+                    <h1 class="price"></h1>
+                    <button class="btnAddCart">Add To Cart</button>
+                   </div>
+                </div>
 
             </main>
             <footer>
