--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <script type="module" src="app.js"></script>
     </head>
     <body>
         <div class="pageContainer">
