restruture of files, add jsx for view render

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -28,7 +28,7 @@
                     <a href="/#/decor">Decor</a>
                 </div>
             </header>
-            <main>
+            <main id="mainContainer">
                 <div class="bannerImg">
                     <img id="banimg" src="\images\banimg.jpg" alt=""> <a href="/#/save" id="save">SAVE 25% On Your First Order</a>
                 </div>
